--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .jumbotron-image {
-    background-image: url('bar.jpg');
+    background-image: url('img/bar.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -37,4 +37,85 @@
     background-color: rgb(48, 44, 44);
     margin-bottom: 20px;
     margin-left: 20px;
+}
+
+.services {
+    height: 400px;
+    margin-bottom: 20px;
+}
+
+.col-bar {
+    background-image: url(img/bar.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 340px;
+}
+
+.col-bar img {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+.col-bar p {
+    color: white;
+    font-size: 25px;
+    font-weight: 500;
+    text-align: center;
+}
+
+@media screen and (max-width: 600px) { 
+    .col-bar p {
+        margin-top: 200px;
+    }
+}
+
+
+.col-bar:hover {
+    opacity: 80%;
+    cursor: pointer;
+}
+
+.col-band {
+    background-image: url(img/musicos.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 340px;
+}
+
+.col-band img {
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+}
+
+
+.col-band p {
+    color: white;
+    font-size: 25px;
+    font-weight: 500;
+    text-align: center;
+}
+
+@media screen and (max-width: 600px) { 
+    .col-band p {
+        margin-top: 200px;
+    }
+}
+
+.col-band:hover {
+    opacity: 80%;
+    cursor: pointer;
+}
+
+#conheca {
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.my-modal i {
+    font-size: 30px;
+    width: 37.5px;
 }
